syntax = "proto3";

package services;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "services";


service ChatService {
    rpc chat (stream ChatMessage) returns (stream ChatMessageFromService);
}

message ChatMessage {
    string from = 1;
    string message = 2;
}

message ChatMessageFromService {
    google.protobuf.Timestamp timestamp = 1;
    ChatMessage message = 2;
}
